--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "pushbullet": "^2.3.0",
-    "winston": "^3.1.0",
-    "winston-daily-rotate-file": "^3.3.3"
+    "winston": "^3.1.0"
   }
 }
